# examples

./: .appveyor.yml  .gitignore  7zbackup.bat  CMakeLists.txt  README.md  exec.bat  push.bat
.github/workflows/: cmake.yml
c macro/: 1.c  2.c  CmakeLists.txt  build.bat
cmake/: function_copy_output_file.cmake  function_set_mainCRTStartup.cmake  function_set_static_msvc_runtime.cmake  include_mfc_static.cmake  include_msvc_charset_utf8.cmake  include_msvc_manifest_no.cmake  include_msvc_release_pdb.cmake  include_msvc_static.cmake  use_assimp.cmake  use_boost.cmake  use_clipp.cmake  use_dxsdk.cmake  use_fmt.cmake  use_freetype.cmake  use_glew.cmake  use_glfw.cmake  use_glm.cmake  use_google_breakpad.cmake  use_google_crashpad.cmake  use_googletest.cmake  use_imgui.cmake  use_irrklang.cmake  use_mysql.cmake  use_mysql_connector.cmake  use_openssl.cmake  use_paho_mqtt_c.cmake  use_pcommlite.cmake  use_rpclib.cmake  use_sdl2.cmake  use_sfml.cmake  use_soil.cmake
examples/: 1.c  2.c  CmakeLists.txt  build.bat
